--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,27 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Home Work #9</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <!-- <load ="partials/header.html" /> -->
 
     <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
+      <h1>Home Work #9</h1>
       <!-- Path to images as from index.html file -->
       <img src="./img/javascript.svg" alt="" />
+
+      <ul>
+        <li><a href="./01-gallery.html">Task 1 - Gallery</a></li>
+        <li><a href="./02-form.html">Task 2 - Form</a></li>
+      </ul>
     </section>
 
     <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
 
-    <script type="module" src="./main.js"></script>
+    <!-- <load ="partials/vite-promo.html" /> -->
+
+    <!-- <script type="module" src="/main.js"></script> -->
   </body>
 </html>
