--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Form</title>
-    <link rel="stylesheet" href="./css/form.css" />
+    <title>Gallery</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <section class="main-section">
       <a href="./index.html">Go to home</a>
     </section>
 
-    <script type="module" src="./js/02-form.js"></script>
+    <script type="module" src="./js/1-gallery.js"></script>
   </body>
 </html>
